# DailyCode

./: LICENSE  README.MD
AndCode/: settings.gradle
AndCode/app/: build.gradle
AndCode/app/src/androidTest/java/ming/com/andcode/: ExampleInstrumentedTest.java
AndCode/app/src/main/: AndroidManifest.xml
AndCode/app/src/main/cpp/: native-lib.cpp
AndCode/app/src/main/java/ming/com/andcode/: AndApplication.java  MainActivity.java
AndCode/app/src/main/java/ming/com/andcode/arouter/: LoginInterceptor.java  SaidInterceptor.java
AndCode/app/src/main/java/ming/com/andcode/dagger2/: DaggerActivity.java
AndCode/app/src/main/java/ming/com/andcode/dagger2/component/: DaggerActivityComp.java  FlowerComponent.java  PotComponent.java
AndCode/app/src/main/java/ming/com/andcode/dagger2/delo/: Flower.java  Lily.java  OkHttpClient.java  Pot.java  RetrofitManager.java  Rose.java
AndCode/app/src/main/java/ming/com/andcode/dagger2/module/: DaggeActivityModule.java  FlowerModule.java  PotModule.java
AndCode/app/src/main/java/ming/com/andcode/dagger2/qualifier/: LilyFlower.java  RoseFlower.java
AndCode/app/src/main/java/ming/com/andcode/dagger2/scope/: ActivityScope.java
AndCode/app/src/main/java/ming/com/andcode/dbbase/: BaseDao.java  BasicEntity.java  BasicSQLHelper.java  Where.java
AndCode/app/src/main/java/ming/com/andcode/dbbase/dbcontact/: ContactEntity.java  ContactEntityDao.java  ContactManager.java  ContactSQLHelper.java  ContactStore.java  DBContactStore.java
AndCode/app/src/main/java/ming/com/andcode/jni/: JNIManage.java
AndCode/app/src/main/java/ming/com/andcode/lifebind/: ActivityFragmentLifecycle.java  LifeUtil.java  Lifecycle.java  LifecycleDetector.java  LifecycleListener.java  LifecycleManagerFragment.java  TestLife.java
AndCode/app/src/main/java/ming/com/andcode/mvp/: MVPActivity.java
AndCode/app/src/main/java/ming/com/andcode/mvp/base/: Api.java  BasePresenter.java  IModel.java  IPresenter.java  IView.java
AndCode/app/src/main/java/ming/com/andcode/mvp/callback/: CallBack.java
AndCode/app/src/main/java/ming/com/andcode/mvp/getdata/: GetDataContract.java  GetDataModel.java  GetDataModeli.java  GetDataPresenter.java
AndCode/app/src/main/java/ming/com/andcode/mvp/getdata/bean/: ArticleListBean.java  BannerBean.java
AndCode/app/src/main/java/ming/com/andcode/mvp/getdata/utils/: LogUtil.java  RetrofitUtils.java
AndCode/app/src/main/res/layout/: activity_dagger.xml  activity_main.xml  activity_mvp.xml
AndCode/app/src/main/res/values/: dimen.xml  strings.xml
AndCode/app/src/test/java/ming/com/andcode/: ExampleUnitTest.java
AndCode/basemodule/: build.gradle
AndCode/basemodule/src/androidTest/java/ming/com/basemodule/: ExampleInstrumentedTest.java
AndCode/basemodule/src/main/: AndroidManifest.xml
AndCode/basemodule/src/main/java/ming/com/basemodule/: Books.java
AndCode/basemodule/src/test/java/ming/com/basemodule/: ExampleUnitTest.java
AndCode/gradle/wrapper/: gradle-wrapper.properties
AndCode/modulerone/: build.gradle
AndCode/modulerone/src/androidTest/java/ming/com/modulerone/: ExampleInstrumentedTest.java
AndCode/modulerone/src/main/: AndroidManifest.xml
AndCode/modulerone/src/main/java/ming/com/modulerone/: ModulerMainActivity.java
AndCode/modulerone/src/main/res/layout/: activity_moduler_main.xml
AndCode/modulerone/src/main/res/values/: strings.xml
AndCode/modulerone/src/test/java/ming/com/modulerone/: ExampleUnitTest.java
AndCode/modulertwo/: build.gradle
AndCode/modulertwo/src/androidTest/java/ming/com/modulertwo/: ExampleInstrumentedTest.java
AndCode/modulertwo/src/main/: AndroidManifest.xml
AndCode/modulertwo/src/main/java/ming/com/modulertwo/: ModulerTMainActivity.java
AndCode/modulertwo/src/main/res/layout/: activity_moduler_tmain.xml
AndCode/modulertwo/src/main/res/values/: strings.xml
AndCode/modulertwo/src/test/java/ming/com/modulertwo/: ExampleUnitTest.java
CCodes/: .gitignore  CMakeLists.txt
CCodes/com.ming.code/: blogcodes.c  main.c  support.c
CCodes/com.ming.code/blogcode/: blogcodes.c  method.h  operatorhead.h  socket_client_tcp.c  socket_client_udp.c  socket_server_tcp.c  socket_server_udp.c  support.c  ycodes.c  ycodes.h
CCodes/com.ming.code/libcurl/: cluster_curl.c  libcurlclient.c
CCodes/com.ming.code/libcurl/request/: cluster_curl.c  cluster_curl.h  libcurlclient.c
CCodes/com.ming.code/libcurl/socket/: externalsocket.c  sendrecv.c  sendrecvheart.c
CCodes/com.ming.code/tinyhttp/: simpleclient.c  smarthttp.c
CMakeDemo/: CMakeLists.txt  License.txt  config.h.in  main.c
CMakeDemo/math/: CMakeLists.txt  MathUtils.c  MathUtils.h
CppCodes/: CMakeLists.txt  main.cpp
CppCodes/com.ming.codes/blogcodes/: Cppblogcode.cpp  Cppblogcode.h  cppblogcode.cpp  cppblogcode.h  googletest.cpp
CppCodes/com.ming.codes/codinginterview/: ConstructBinaryTree.cpp  CopyComplexList.cpp  FindDuplicate.cpp  MinNumberInRotatedArray.cpp  PrintListInReOrder.cpp  QueueInTwoStack.cpp  ReplaceSpace.cpp  ReverseLinkedList.cpp
CppCodes/com.ming.codes/leetcode/: ConstructBinaryTree.cpp  FindDuplicate.cpp  NextNodeInBinaryTree.cpp  PrintListInReOrder.cpp  ReplaceSpace.cpp
LeetCode/: .gitignore
LeetCode/src/com/heng/leetcode/: MainActivity.java
LeetCode/src/com/heng/leetcode/algorithms/: LeetAlogorithms.java
SubHey/src/com/heng/subhey/: MainActivity.java
SubHey/src/com/heng/subhey/annotation/: CheckOut.java  CheckOutTool.java  Chou.java  Liming.java  MaSaGei.java  NoUse.java  Person.java
SubHey/src/com/heng/subhey/consumer/: Chef.java  ConsumerPerson.java  Meal.java  Restaurant.java
SubHey/src/com/heng/subhey/nio/: FileIOUtils.java  FileUtils.java
SubHey/src/com/heng/subhey/proxy/: Animal.java  CgLibProxyFactory.java  IUserDao.java  PlaceForSell.java  ProxyFactory.java  Restaurant.java  SauerkrautRest.java  UserDao.java  UserDaoProxy.java
SubHey/src/com/heng/subhey/sigleton/: Singleton.java  StaticInnerSingleton.java
YCLearn/com.ming.yclearn/codes/: ycodes.c  ycodes.h
